src/builder/tests/snapshots/ciboulette2postgres__builder__tests__gen_json_builder__sparse_field.snap
---
source: src/builder/tests/gen_json_builder.rs
expression: res

---
(
    "JSON_BUILD_OBJECT($0, \"public\".\"peoples\".\"first-name\", $1, \"public\".\"peoples\".\"last-name\") ",
    Ciboulette2SqlArguments {
        inner: [
            Text(
                Some(
                    "first-name",
                ),
            ),
            Text(
                Some(
                    "last-name",
                ),
            ),
        ],
    },
)
