src/builder/tests/snapshots/ciboulette2postgres__builder__tests__gen_json_builder__sparse_field_empty.snap
---
source: src/builder/tests/gen_json_builder.rs
expression: res

---
(
    "NULL::json ",
    Ciboulette2SqlArguments {
        inner: [],
    },
)
